--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
+#como no tengo node_modules para ignorar, le pongo ignorar una foto pesada
 node_modules
-.images/biblioteca.png
+../images/biblioteca.png
